availabilty fixed div height and text align

--- a/src/app/booking-management/booking-jobs/booking-jobs.component.css
+++ b/src/app/booking-management/booking-jobs/booking-jobs.component.css
@@ -22,3 +22,15 @@
     font-size: 20px;
     float: left;
 }
+
+.time-range {
+    margin-top: 13px;
+}
+
+.fix-height {
+    height: 29px !important;
+}
+
+.txt-left {
+    text-align: left;
+}
